<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="290dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:text="@string/qis"
        android:textAlignment="center"
        android:textColor="#E41111"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="116dp"
        android:layout_height="34dp"
        android:layout_marginTop="56dp"
        android:text="@string/fname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="88dp"
        android:text="@string/block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="120dp"
        android:text="@string/symbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="152dp"
        android:text="@string/reqid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="184dp"
        android:text="@string/vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="216dp"
        android:text="@string/vehicleid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="248dp"
        android:text="@string/make"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="280dp"
        android:text="@string/model"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="312dp"
        android:text="@string/variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="344dp"
        android:text="@string/fuel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="376dp"
        android:text="@string/cc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="408dp"
        android:text="@string/previnsu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="440dp"
        android:text="@string/mfgyear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="472dp"
        android:text="@string/regdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginTop="504dp"
        android:text="@string/expdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/fname"
        android:layout_width="167dp"
        android:layout_height="34dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="56dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/block"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="88dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/symbol"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="120dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/reqid"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="152dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/vertical"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="184dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/vehicleid"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="216dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/make"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="248dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/model"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="280dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/variant"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="312dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/fuel"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="344dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/cc"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="376dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/previnsu"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="408dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/mfg"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="440dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/regdate"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="472dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/expdate"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="504dp"
        android:text="null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/waitmsg"
        android:layout_width="291dp"
        android:layout_height="32dp"
        android:layout_marginBottom="64dp"
        android:text="Please Wait while data is being fetched!"
        android:textAlignment="center"
        android:textColor="#CD0A0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="Done"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>